[gd_scene load_steps=4 format=3 uid="uid://ba8o1td4sf6sm"]

[ext_resource type="Script" path="res://scenes/Menus/new_game.gd" id="1_6yshf"]
[ext_resource type="Theme" uid="uid://dqdpb1lan45tv" path="res://ui/ui.tres" id="1_pg2j2"]
[ext_resource type="Texture2D" uid="uid://d3p8ngmbp5prx" path="res://Assets/ALL OTHER ASSETS/menu.png" id="3_nxxua"]

[node name="New Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pg2j2")
script = ExtResource("1_6yshf")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.568627)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nxxua")

[node name="Mode Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.4
anchor_right = 0.1
anchor_bottom = 0.4
offset_right = 500.0
offset_bottom = 153.0
scale = Vector2(1.76, 2.04)

[node name="Easy Mode" type="Button" parent="Mode Options"]
layout_mode = 2
text = "Easy Mode"

[node name="Medium Mode" type="Button" parent="Mode Options"]
layout_mode = 2
text = "Medium Mode"

[node name="Hard Mode" type="Button" parent="Mode Options"]
layout_mode = 2
text = "Hard Mode"

[node name="Button" type="Button" parent="Mode Options"]
layout_mode = 2
text = "Back"

[node name="Info" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.3
anchor_bottom = 0.3
offset_right = 448.0
offset_bottom = 54.0
text = "Reform the company by increasing your company's stats!
Choose your difficulty mode.Please note that hard mode
includes the stock market. "

[connection signal="pressed" from="Mode Options/Easy Mode" to="." method="_on_easy_mode_pressed"]
[connection signal="pressed" from="Mode Options/Medium Mode" to="." method="_on_medium_mode_pressed"]
[connection signal="pressed" from="Mode Options/Hard Mode" to="." method="_on_hard_mode_pressed"]
[connection signal="pressed" from="Mode Options/Button" to="." method="_on_button_pressed"]
